# mnemonic

./: .asf.yaml  .gitattributes  .gitignore  .travis.yml  BUILD.md  DISCLAIMER  KEYS  NOTICE  README.md  build.gradle  index.html  pom.xml  proguard.conf  project-info.html  project-reports.html  settings.gradle
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml
.github/workflows/: docker_ubuntu.yml
_docs/: devices.md
_includes/: footer.html  header.html  primary-nav-items.html
allocator-services/: pom.xml
allocator-services-parent-project/: index.html  project-info.html
allocator-services-parent-project/nvml-vmem-service/: index.html  project-info.html  project-reports.html
allocator-services-parent-project/pmalloc-service/: index.html  project-info.html  project-reports.html
allocator-services/nvml-vmem-service/: pom.xml
allocator-services/pmalloc-service/: pom.xml
allocator-services/pmalloc-service/src/main/native/: CMakeLists.txt  com_intel_mnemonic_service_allocatorservice_internal_PMallocServiceImpl.c  com_intel_mnemonic_service_allocatorservice_internal_PMallocServiceImpl.h  common.c  org_apache_mnemonic_service_allocatorservice_internal_PMallocServiceImpl.c  org_apache_mnemonic_service_allocatorservice_internal_PMallocServiceImpl.h
apidocs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
build-tools/: bundle.sh  mnemonic-checkstyle.xml  release.sh  runTestCases.py  runall.sh  source-assembly.xml  suppressions.xml  test.conf
collections/: pom.xml  proguard.conf
core/: pom.xml
css/: screen.scss
develop/: bylaws.md  index.md
docker/: Dockerfile  README.md
docker-ubuntu/: Dockerfile  README.md
docker/docker-CentOS/: Dockerfile
docker/docker-Fedora/: Dockerfile
docker/docker-Ubuntu/: Dockerfile
examples/: pom.xml
mnemonic-benches/: pom.xml
mnemonic-benches/mnemonic-sort-bench/: build.gradle  pom.xml
mnemonic-benches/mnemonic-spark-kmeans-bench/: README.md  build.gradle  pom.xml
mnemonic-collections/: build.gradle  index.html  pom.xml  proguard.conf  project-info.html  project-reports.html
mnemonic-collections/apidocs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html
mnemonic-collections/testapidocs/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  (+4 more)
mnemonic-common/: build.gradle  pom.xml
mnemonic-computing-services/: pom.xml
mnemonic-computing-services/mnemonic-utilities-service/src/main/native/: CMakeLists.txt  common.c  common.h  org_apache_mnemonic_service_computing_internal_PrintServiceImpl.c  org_apache_mnemonic_service_computing_internal_PrintServiceImpl.h  org_apache_mnemonic_service_computing_internal_SortServiceImpl.c  org_apache_mnemonic_service_computing_internal_SortServiceImpl.h  org_apache_mnemonic_service_computing_internal_VectorizationServiceImpl.c  org_apache_mnemonic_service_computing_internal_VectorizationServiceImpl.h  org_apache_mnemonic_service_computingservice_internal_PrintServiceImpl.c  org_apache_mnemonic_service_computingservice_internal_PrintServiceImpl.h  org_apache_mnemonic_service_computingservice_internal_SortServiceImpl.c  org_apache_mnemonic_service_computingservice_internal_SortServiceImpl.h
mnemonic-core/: build.gradle  index.html  pom.xml  proguard.conf  project-info.html  project-reports.html
mnemonic-examples/: README.md  build.gradle  index.html  pom.xml  project-info.html  project-reports.html
mnemonic-hadoop/: pom.xml
mnemonic-memory-services/: pom.xml
mnemonic-memory-services/mnemonic-nvml-pmem-service/src/main/native/: CMakeLists.txt  common.c  common.h  layout.h  org_apache_mnemonic_service_memory_internal_PMemServiceImpl.c  org_apache_mnemonic_service_memory_internal_PMemServiceImpl.h  org_apache_mnemonic_service_memoryservice_internal_PMemServiceImpl.c  org_apache_mnemonic_service_memoryservice_internal_PMemServiceImpl.h
mnemonic-memory-services/mnemonic-pmalloc-service/src/main/native/: CMakeLists.txt  common.c  common.h  config.h.in  org_apache_mnemonic_service_allocatorservice_internal_PMallocServiceImpl.c  org_apache_mnemonic_service_memory_internal_PMallocServiceImpl.c  org_apache_mnemonic_service_memory_internal_PMallocServiceImpl.h  org_apache_mnemonic_service_memoryservice_internal_PMallocServiceImpl.c  org_apache_mnemonic_service_memoryservice_internal_PMallocServiceImpl.h  pmaddress.c  pmalign.c  pmalloc.c  pmalloc.h  pmattach.c  pmcalloc.c  pmcheck.c  pmdetach.c  pmfree.c  pmfunction.c  pmfunction.h  pminternal.h  pmkeys.c  pmmap.c  pmrealloc.c  pmreport.c  pmsync.c  pmvalloc.c
mnemonic-memory-services/mnemonic-redis-service/src/main/native/: CMakeLists.txt  org_apache_mnemonic_service_memory_internal_RedisServiceImpl.c  org_apache_mnemonic_service_memory_internal_RedisServiceImpl.h
mnemonic-memory-services/mnemonic-sys-vmem-service/src/main/native/: CMakeLists.txt  common.c  common.h  org_apache_mnemonic_service_memory_internal_SysVMemServiceImpl.c  org_apache_mnemonic_service_memory_internal_SysVMemServiceImpl.h  org_apache_mnemonic_service_memoryservice_internal_SysVMemServiceImpl.c  org_apache_mnemonic_service_memoryservice_internal_SysVMemServiceImpl.h
mnemonic-protocol/: Cargo.toml
mnemonic-query/: build.gradle  pom.xml
mnemonic-sessions/: build.gradle  pom.xml
mnemonic-spark/: pom.xml
site/: BUILD.md  README.md  _config.yml  index.html
src/main/native/: CMakeLists.txt  Makefile.am  autogen.sh  com_intel_bigdatamem_BigDataMemAllocator.c  com_intel_bigdatamem_BigDataMemAllocator.h  com_intel_bigdatamem_BigDataPMemAllocator.c  com_intel_bigdatamem_BigDataPMemAllocator.h  common.c  common.h  configure.ac
talks/: index.md
tools/: find-mnemonic-home.sh  release.sh  runTestCases.py  runall.sh  source-assembly.xml  test.conf
(+852 files in other folders)
